# 1158Engine

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Component.h  Editor.h  Engine.h  GameObject.h  InputManager.h  Light.h  LightComponent.h  Mesh.h  MeshComponent.h  NotificationManager.h  Renderer.h  Scene.h  SceneManager.h  ScriptBase.h  ScriptComponent.h  Shader.h  ShaderManager.h  TextRenderer.h  TransformComponent.h
include/core/: Notification.h  PropertyTypes.h
include/glad/: glad.h
scripts/: PlayerController.cpp
shaders/: basic.frag  basic.vert  font.frag  font.vert
src/: Camera.cpp  Editor.cpp  Engine.cpp  GameObject.cpp  InputManager.cpp  Light.cpp  LightComponent.cpp  Mesh.cpp  MeshComponent.cpp  NotificationManager.cpp  Renderer.cpp  ScriptComponent.cpp  Shader.cpp  ShaderManager.cpp  TextRenderer.cpp  glad.c  main.cpp
